# AutoDiVer

./: .dockerignore  .gitignore  .gitmodules  .mailmap  Dockerfile  LICENSE  README.md  build_docker.sh  cipher_model.py  gift64.py  log_config.json  main.py  mc_example.py  model_util.py  pyproject.toml  requirements.txt  run_docker.sh  sbox_model.py  setup.py  solve_gift64.py  test_midori64.py  test_sat_toolkit.py  tmp.txt  util.py
.github/workflows/: run-tests.yml
ascon/: ascon_model.py
found_trails/ascon/: ascon_r1.npz  ascon_r2.npz
found_trails/gift128/: gift128_r1.npz  gift128_r10.npz  gift128_r10_1.npz  gift128_r11.npz  gift128_r11_1.npz  gift128_r12.npz  gift128_r12_1.npz  gift128_r13.npz  gift128_r13_1.npz  gift128_r14.npz  gift128_r1_1.npz  gift128_r2.npz  gift128_r2_1.npz  gift128_r3.npz  gift128_r3_1.npz  gift128_r4.npz  gift128_r4_1.npz  gift128_r5.npz  gift128_r5_1.npz  gift128_r6.npz  gift128_r6_1.npz  gift128_r7.npz  gift128_r7_1.npz  gift128_r8.npz  gift128_r8_1.npz  gift128_r9.npz  gift128_r9_1.npz
found_trails/gift64/: gift64_r1.npz  gift64_r10.npz  gift64_r10_1.npz  gift64_r11.npz  gift64_r11_1.npz  gift64_r12.npz  gift64_r12_1.npz  gift64_r13.npz  gift64_r13_1.npz  gift64_r1_1.npz  gift64_r2.npz  gift64_r2_1.npz  gift64_r3.npz  gift64_r3_1.npz  gift64_r4.npz  gift64_r4_1.npz  gift64_r5.npz  gift64_r5_1.npz  gift64_r6.npz  gift64_r6_1.npz  gift64_r7.npz  gift64_r7_1.npz  gift64_r8.npz  gift64_r8_1.npz  gift64_r9.npz  gift64_r9_1.npz
found_trails/midori128/: midori128_r1.npz  midori128_r2.npz  midori128_r3.npz  midori128_r4.npz  midori128_r5.npz  midori128_r6.npz
found_trails/midori64/: midori64_r1.npz  midori64_r2.npz  midori64_r3.npz  midori64_r4.npz  midori64_r5.npz  midori64_r6.npz
found_trails/present80/: present80_r1.npz  present80_r10.npz  (+12 more)
gift64/: gift64.py  gift64_ref.c  gift_64_4.cnf  gift_cipher.pyx  gift_indices.py  gift_model.py  gift_util.py  solve_gift64.py
latex/: arx.sty  char.tex  char_rectangle.tex  char_skinny.tex  char_speck_standalone.tex  char_warp.tex  gift.sty  gift64_r13.tex  gift64_r4.tex  gift64_r5.tex  gift64_toy_char.tex  out.jpeg-1.ppm  present.sty  present80_r10.tex  present80_r12.tex  present80_r14.tex  present80_r8.tex  present80_r9.tex  rectangle.sty  skinny.sty  skinny128_r10_2.tex  skinny128_r11.tex  skinny128_r12_2.tex  skinny128_r13_2.tex  skinny128_r3_2.tex  skinny128_r6_2.tex  skinny128_rel_key_r7.tex  skinny128_tk3_ddh+21_r17_table_12_fixed.tex  skinny64_r12.tex  skinny64_r13.tex  skinny64_r6_1.tex  speck.sty  speck128_r6.tex  speck32_r3.tex  speck32_r4.tex  speck32_r7.tex  speck32_r9_BR22_table_20a.tex  speck64_r12.tex  spn.sty  toy_char.tex  (+4 more)
midori/: midori.py  midori128.c  midori64.c  midori64_model.py  midori_cipher.pyx  util.py
midori128/: midori128_model.py  midori_cipher.pyx  util.py
midori64/: midori64_model.py  midori_cipher.pyx  util.py
model/: gift64_4.cnf
ref/: gift64.c
scripts/: count_prob_round_reduced.sh  create_latex_cardenc.py  create_latex_characteristic_search.py  gather_results.py
skinny/: _util.pyx  constants.py  read_sol.py  skinny.pxd  skinny.pyx  skinny128.py  skinny_model.py  util.py
tests/: pyproject.toml  setup.py  test_arx_util.py  test_ascon.py  test_gift128.py  test_gift64.py  test_integration.py  test_linear_layer.py  test_midori128.py  test_midori64.py  test_present.py  test_pyjamask.py  test_rectangle128.py  test_rectangleLongKey.py  test_skinny128.py  test_skinny64.py  test_speck.py  test_speedy192.py  test_tikzify.py  test_warp.py
tests/src/autodiver_ciphers/: .gitignore  README.md
tests/src/autodiver_ciphers/ascon/: pyascon.py
tests/src/autodiver_ciphers/gift/: LICENSE.txt  gift128.h  gift128_cipher.pyx  gift128_ref.c  gift64_cipher.pyx  gift64_ref.c
tests/src/autodiver_ciphers/midori128/: midori128.c  midori_cipher.pyx
tests/src/autodiver_ciphers/midori64/: midori64.c  midori_cipher.pyx
tests/src/autodiver_ciphers/present/: LICENSE.txt  present_cipher.py
tests/src/autodiver_ciphers/pyjamask/: pyjamask96.pyx
tests/src/autodiver_ciphers/pyjamask/pyjamask-c/: pyjamask.c  pyjamask.h
tests/src/autodiver_ciphers/rectangle128/: LICENSE.txt  rectangle_cipher.pyx  rectangle_ref.c
tests/src/autodiver_ciphers/skinny/: LICENSE.txt  skinny-internal.h  skinny.pxd  skinny.pyx  skinny128-cipher.c  skinny128-cipher.h
tests/src/autodiver_ciphers/speedy192/: speedy192.c  speedy_cipher.pyx
tests/src/autodiver_ciphers/warp128/: warp128.c  warp_cipher.pyx
trails/: convert.py  gift64_12_0.txt  gift64_12_0_original.txt  gift64_13.txt  gift64_13_3.txt  gift64_4.py  gift64_4.txt  gift64_9.txt
(+746 files in other folders)
