[build-system]
requires = ["setuptools>=64", "wheel", "Cython"]

[project]
name = "autodiver"
version = "0.4"
# dynamic = ["version"]
dependencies = [
   "colorama",
   "cython",
   "galois",
   "icecream",
   "ipython",
   "pyapproxmc",
   "pycryptosat",
   "sat_toolkit>=0.4.4",
   "galois",
   "setuptools",
   "tqdm",
   "numpy",
]
requires-python = ">=3.9"
authors = [
]

description = "A tool for verifying differential characteristics in block ciphers"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: POSIX :: Linux",
   "Operating System :: MacOS",
   "Programming Language :: Python",
   "Programming Language :: Cython",
   "Programming Language :: C",
   "Framework :: Pytest",
]

[tool.setuptools.package-data]
autodiver = ["**/log_config.json"]
[project.scripts]
verify-characteristic = "autodiver.verify_characteristic:main"
tikzify = "autodiver.tikzify:main"
