[build-system]
requires = ["setuptools>=64", "wheel", "Cython"]

[project]
name = "autodiver"
version = "0.4"
dependencies = [
   "colorama",
   "click",
   "cython",
   "galois",
   "icecream",
   "ipython",
   "pyapproxmc",
   "pycryptosat!=5.11.23",
   "sat_toolkit>=0.4.6",
   "galois",
   "setuptools",
   "tqdm",
   "numpy",
   "scipy"
]
requires-python = ">=3.9"
authors = [
    {name = "Marcel Nageler"},
    {name = "Shibam Ghosh"},
    {name = "Maria Eichlseder"},
]

maintainers = [
    {name = "Marcel Nageler", email = "marcel.nageler@iaik.tugraz.at"},
]

description = "A tool for verifying differential characteristics in block ciphers"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: POSIX :: Linux",
   "Operating System :: MacOS",
   "Programming Language :: Python",
   "Programming Language :: Cython",
   "Programming Language :: C",
   "Framework :: Pytest",
]

[tool.setuptools.package-data]
autodiver = ["**/log_config.json"]
[project.scripts]
verify-characteristic = "autodiver.verify_characteristic:cli"
tikzify = "autodiver.tikzify:main"
