[build-system]
requires = ["setuptools>=64", "wheel"]

[project]
name = "autodiver"
version = "0.4"
dependencies = [
   "click",
   "galois",
   "pyapproxmc",
   "pycryptosat!=5.11.23",
   "sat_toolkit>=0.4.6",
   "setuptools",
   "tqdm",
   "numpy>=2.0",
]
requires-python = ">=3.9"
authors = [
    {name = "Marcel Nageler"},
    {name = "Shibam Ghosh"},
    {name = "Maria Eichlseder"},
    {name = "Marlene Jüttler"}
]

maintainers = [
    {name = "Marcel Nageler", email = "marcel.nageler@tugraz.at"},
]

description = "A tool for verifying differential characteristics in block ciphers"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: POSIX :: Linux",
   "Operating System :: MacOS",
   "Programming Language :: Python",
   "Programming Language :: C",
   "Framework :: Pytest",
]

[tool.setuptools.package-data]
autodiver = ["**/log_config.json"]

[project.optional-dependencies]
dev = ["ipython"]

[project.scripts]
autodiver = "autodiver.autodiver:cli"
tikzify = "autodiver.tikzify:main"
