[build-system]
requires = ["setuptools>=64", "wheel", "Cython"]

[project]
name = "autodiver-ciphers"
version = "1.0"
dependencies = [
   "cython",
   "numpy",
   "pytest",
]
requires-python = ">=3.9"

description = "A collection of cipher implementations"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
   "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
   "Operating System :: POSIX :: Linux",
   "Operating System :: MacOS",
   "Programming Language :: Python",
   "Programming Language :: Cython",
   "Programming Language :: C",
   "Framework :: Pytest",
]
